--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,19 +7,14 @@
     color: #FFFFFF;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
 
 .container {
     display: flex;
-    flex-grow: 1;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     position: relative;
-
 }
 
 .how-to-container {
@@ -29,6 +24,8 @@ body {
     padding: 10px;
     position: absolute;
     border-radius: 20px;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
     visibility: hidden;
 }
 
@@ -40,7 +37,7 @@ body {
     border: none;
     border-radius: 25px;
     padding: 5px 10px;
-    color: rgb(135, 135, 135);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     font-size: large;
     font-weight: bold;
@@ -65,10 +62,13 @@ body {
 }
 
 
-
 .items-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    
+    flex-grow: 1;
 }
 .game-title {
     font-size: 120px;
@@ -104,4 +104,27 @@ body {
 
 .show {
     visibility: visible;
+    opacity: 1;
+    
 }
+.hide {
+    visibility: hidden;
+}
+/* Start Game Page */
+#ready-message, #category-value, .times-up-message{
+    font-size: 100px;
+   
+}
+
+#countdownValue {
+    font-size: 100px;
+    height: 100px;
+}
+
+.play-again-message {
+    font-size: 30px;
+    margin-top: 40px; 
+    margin-bottom:-30px ;
+     
+}
+
